--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,49 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap');
+
+
+$Dark-Cyan: hsl(180, 29%, 50%);
+$Light-Cyan-Background: hsl(180, 52%, 96%);
+$Light-Cyan-Filter: hsl(180, 31%, 95%);
+$Dark-Cyan: hsl(180, 8%, 52%);
+$Very-Dark-Cyan: hsl(180, 14%, 20%);
+body{
+    margin: 0;
+}
+
+h1 {
+    font-family: Spartan;
+    font-size: 12px;
+    color: $Dark-Cyan;
+    margin: 0;
+}
+
+h2 {
+    font-family: Spartan;
+    font-size: 15px;
+    color: $Very-Dark-Cyan;
+    margin: 0;
+    &:hover{
+        color: $Dark-Cyan;
+    }
+}
+
+p{
+    color: #bbc3c0;
+    font-weight: 400;
+    font-family: 'Spartan';
+    font-size: 12px;
+    margin: 0;
+}
+
+.label{
+        background-color: #eef6f6;
+        padding: 5px;
+        color: #5dada0;
+        font-family: 'Spartan';
+        line-height: 14px;
+        font-size: 10px;
+        font-weight: 700;
+        text-align: center;
+        height: 12px;
+        
+}
